# home_work_oop

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: category.py  hw_14_1_p2.py  product.py  services.py
tests/: conftest.py  test_category.py  test_print_mixin.py  test_product.py  test_services.py
