[project]
name = "home-work-oop-leo"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonid_Gulaev",email = "cybernooblo92@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
isort = "^6.0.1"
black = "^25.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^4.1.0"


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119
multi_line_output = 1

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
